--- a/Login-y-registro/assets/css/estilos.css
+++ b/Login-y-registro/assets/css/estilos.css
@@ -28,11 +28,11 @@ body {
 header {
     width: 100%;
     height: 600px;
-    background: #bc4e9c;
+    background: #46A2FD;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/fondo\ nuevo.webp);
+    background: -webkit-linear-gradient(to right, hsla(0, 2%, 47%, 0.459), hsla(0, 0%, 1%, 0.664)), url(../img/fondo\ nuevo.webp);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/fondo\ nuevo.webp);
+    background: linear-gradient(to right, hsla(0, 2%, 47%, 0.459), hsla(0, 0%, 1%, 0.664)), url(../img/fondo\ nuevo.webp);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-attachment: fixed;
@@ -110,11 +110,11 @@ main .sobre-nosotros{
     border-radius: 50%;
     display: inline-block;
     text-align: center;
-    width: 30px;
-    height: 30px;
-    padding: 2px;
+    width: 3rem;
+    height: 3rem;
+    padding: 0.5rem;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
-    margin-right: 5px;
+    margin-right: 1rem;
 }
 
 .contenido-textos p{
@@ -192,16 +192,31 @@ main .sobre-nosotros{
 }
 
 .servicio-ind{
-    width: 28%;
+    width: 30%;
     text-align: center;
 }
 
 .servicio-ind img{
-    width: 90%;
+    width: 100%;
 }
 
+/* .Reparar{
+    width: 30rem;
+    height: 20rem;
+}
+
+.Liberar{
+    width: 30rem;
+    height: 20rem;
+}
+
+.Venta{
+    width: 30rem;
+    height: 20rem;
+} */
+
 .servicio-ind h3{
-    margin: 10px 0;
+    margin: 1rem 0;
 }
 
 .servicio-ind p{
@@ -209,45 +224,7 @@ main .sobre-nosotros{
     text-align: justify;
 }
 
-/* footer */
 
-footer{
-    background: #1D2E43;
-    padding: 60px 0 30px 0;
-    margin: auto;
-    overflow: hidden;
-}
-
-.contenedor-footer{
-    display: flex;
-    width: 90%;
-    justify-content: space-evenly;
-    margin: auto;
-    padding-bottom: 50px;
-    border-bottom: 1px solid #ccc;
-}
-
-.content-foo{
-    text-align: center;
-}
-
-.content-foo h4{
-    color: #fff;
-    border-bottom: 3px solid #46A2FD;
-    padding-bottom: 5px;
-    margin-bottom: 10px;
-}
-
-.content-foo p{
-    color: #FFFFFF;
-}
-
-.titulo-final{
-    text-align: center;
-    font-size: 24px;
-    margin: 20px 0 0 0;
-    color: #FFFFFF;
-}
 
 @media screen and (max-width:900px){
     header{
@@ -274,6 +251,7 @@ footer{
         width: 44%;
     }
 
+   
     /* Clientes */
 
     .cards{
@@ -307,8 +285,10 @@ footer{
     }
 
     .servicio-ind img{
-        width: 90%;
+        width: 80%;
+        height: 80%;
     }
+
 }
 
 @media screen and (max-width:500px){
@@ -358,31 +338,5 @@ footer{
     .cards .card img{
         width: 90px;
         height: 90px;
-    }
-
-    /* Footer */
-
-    .contenedor-footer{
-        flex-direction: column;
-        border: none;
-    }
-
-    .content-foo{
-        margin-bottom: 20px;
-        text-align: center;
-    }
-
-    .content-foo h4{
-        border: none;
-    }
-
-    .content-foo p{
-        color: #ccc;
-        border-bottom: 1px solid #f2f2f2;
-        padding-bottom: 20px;
-    }
-
-    .titulo-final{
-        font-size: 20px;
     }
 }
